# bemenu

./: .editorconfig  .gitignore  CMakeLists.txt  CONTRIBUTORS.md  GNUmakefile  README.md  bemenu.pc.in  bemenu_path  build-osx.sh  darwin.nix  default.nix  flake.nix  pw.cloudef.bemenu-run.yml  pw.cloudef.bemenu.yml
.github/: FUNDING.yml
.github/workflows/: ci.yml  flatpak.yml  release.yml
client/: CMakeLists.txt  bemenu-run.c  bemenu.c  client.c
client/common/: common.c  common.h
doxygen/: CMakeLists.txt  Doxyfile  Doxyfile.in  Mainpage.dox
doxygen/doxygen-qmi-style/: README.md  footer.html  header.html  qmi.css
doxygen/doxygen-qmi-style/search/: search.css
lib/: CMakeLists.txt  bemenu.c  bemenu.h  config.h  filter.c  internal.h  item.c  library.c  list.c  menu.c  options.c  util.c  version.h.in  vim.c  vim.h
lib/draw/: curses.c
lib/renderers/: CMakeLists.txt  cairo.h  cairo_renderer.h
lib/renderers/curses/: CMakeLists.txt  curses.c
lib/renderers/wayland/: CMakeLists.txt  registry.c  wayland.c  wayland.h  window.c  xdg-shell.xml
lib/renderers/x11/: CMakeLists.txt  window.c  x11.c  x11.h  xkb_unicode.c  xkb_unicode.h
man/: CMakeLists.txt  bemenu-run.1  bemenu.1  bemenu.1.in  bemenu.1.scd.in
scripts/: check-symbols.sh
test/: CMakeLists.txt  bmMenuNew.c  bm_menu_new.c
