# Sources
SET(CLIENT_SOURCE client.c)
SET(CLIENT_INCLUDE ${BEMENU_INCLUDE_DIRS})
SET(CLIENT_LIBRARIES ${BEMENU_LIBRARIES})

# Warnings
IF (CMAKE_COMPILER_IS_GNUCC OR CMAKE_COMPILER_IS_GNUCXX)
    SET(CMAKE_C_FLAGS   "${CMAKE_C_FLAGS}   -Wall -Wextra -Wno-variadic-macros -Wno-long-long")
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Wno-variadic-macros -Wno-long-long")
ENDIF ()

IF (UNIX AND CMAKE_COMPILER_IS_GNUCC)
    SET(CMAKE_POSITION_INDEPENDENT_CODE ON)
    IF (${CMAKE_VERSION} VERSION_LESS 2.8.9)
        ADD_DEFINITIONS(-fPIC)
    ENDIF ()
ENDIF ()

# Compile
INCLUDE_DIRECTORIES(${CLIENT_INCLUDE})
ADD_EXECUTABLE(client ${CLIENT_SOURCE})
TARGET_LINK_LIBRARIES(client ${CLIENT_LIBRARIES})
SET_TARGET_PROPERTIES(client PROPERTIES OUTPUT_NAME bemenu)

# Install
INSTALL(TARGETS client DESTINATION bin)

# vim: set ts=8 sw=4 tw=0 :
