SET(RENDERERS "")

IF(BEMENU_CURSES_RENDERER)
    LIST(APPEND RENDERERS "curses")
ENDIF()

IF(BEMENU_X11_RENDERER)
    LIST(APPEND RENDERERS "x11")
ENDIF()

IF(BEMENU_WAYLAND_RENDERER)
    LIST(APPEND RENDERERS "wayland")
ENDIF()

IF(NOT RENDERERS)
    MESSAGE(FATAL_ERROR "At least one renderer should be enabled")
ENDIF()

ADD_DEFINITIONS(-DPANGO_DISABLE_DEPRECATED)

SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/renderers)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/..)
FOREACH (renderer ${RENDERERS})
    ADD_SUBDIRECTORY(${renderer})
ENDFOREACH()
