SET(CURSES_NEED_NCURSES TRUE)
FIND_PACKAGE(Curses)

if (CURSES_FOUND)
    INCLUDE_DIRECTORIES(${CURSES_INCLUDE_DIRS})
    ADD_LIBRARY(bemenu-renderer-curses SHARED curses.c)
    SET_TARGET_PROPERTIES(bemenu-renderer-curses PROPERTIES PREFIX "")
    TARGET_LINK_LIBRARIES(bemenu-renderer-curses ${BEMENU_LIBRARIES} ${CURSES_LIBRARY} m)
    INSTALL(TARGETS bemenu-renderer-curses DESTINATION lib/bemenu)
endif ()
