FIND_PACKAGE(Wayland)
FIND_PACKAGE(Cairo)
FIND_PACKAGE(Pango)
FIND_PACKAGE(XKBCommon)

if (WAYLAND_FOUND AND CAIRO_FOUND AND PANGO_FOUND AND XKBCOMMON_FOUND)
    INCLUDE(Wayland)
    WAYLAND_ADD_PROTOCOL_CLIENT(proto-xdg-shell "xdg-shell.xml" xdg-shell)
    INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR} ${WAYLAND_CLIENT_INCLUDE_DIR} ${XKBCOMMON_INCLUDE_DIR} ${CAIRO_INCLUDE_DIRS} ${PANGO_INCLUDE_DIRS})
    ADD_LIBRARY(bemenu-renderer-wayland SHARED wayland.c registry.c window.c ${proto-xdg-shell})
    SET_TARGET_PROPERTIES(bemenu-renderer-wayland PROPERTIES PREFIX "")
    TARGET_LINK_LIBRARIES(bemenu-renderer-wayland ${BEMENU_LIBRARIES} ${WAYLAND_CLIENT_LIBRARIES} ${XKBCOMMON_LIBRARIES} ${CAIRO_LIBRARIES} ${PANGO_LIBRARIES} m)
    INSTALL(TARGETS bemenu-renderer-wayland DESTINATION lib/bemenu)
endif ()
