FIND_PACKAGE(X11 REQUIRED)
FIND_PACKAGE(Cairo REQUIRED)
FIND_PACKAGE(Pango REQUIRED)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR} ${X11_INCLUDE_DIR} ${X11_Xinerama_INCLUDE_PATH} ${CAIRO_INCLUDE_DIRS} ${PANGO_INCLUDE_DIRS})
ADD_LIBRARY(bemenu-renderer-x11 SHARED x11.c window.c xkb_unicode.c)
SET_TARGET_PROPERTIES(bemenu-renderer-x11 PROPERTIES PREFIX "")
TARGET_LINK_DIRECTORIES(bemenu-renderer-x11 PRIVATE ${X11_LIBRARY_DIRS} ${CAIRO_LIBRARY_DIRS} ${PANGO_LIBRARY_DIRS})
TARGET_LINK_LIBRARIES(bemenu-renderer-x11 ${BEMENU_LIBRARIES} ${X11_LIBRARIES} ${X11_Xinerama_LIB} ${CAIRO_LIBRARIES} ${PANGO_LIBRARIES} m)
INSTALL(TARGETS bemenu-renderer-x11 DESTINATION "${CMAKE_INSTALL_LIBDIR}/bemenu")
